// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Endpoint > .getResponses() > should return positive schema and mime types according to the result handler 1`] = `
[
  {
    "_type": "ZodObject",
    "shape": {
      "data": {
        "_type": "ZodObject",
        "shape": {
          "something": {
            "_type": "ZodNumber",
          },
        },
      },
      "status": {
        "_type": "ZodLiteral",
        "value": "success",
      },
    },
  },
]
`;

exports[`Endpoint > .getResponses() > should return the negative schema of the result handler 1`] = `
[
  {
    "_type": "ZodObject",
    "shape": {
      "error": {
        "_type": "ZodObject",
        "shape": {
          "message": {
            "_type": "ZodString",
          },
        },
      },
      "status": {
        "_type": "ZodLiteral",
        "value": "error",
      },
    },
  },
]
`;
